General studies related to Angular's innards

--- a/src/app/Root/root.component.html
+++ b/src/app/Root/root.component.html
@@ -52,7 +52,7 @@
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
       <Sections [sections]="sections"/>
-      <Socials [socials]="socials"/>
+      <SocialsComponent [socials]="socials"/>
     </div>
   </div>
 </main>
